# GTSever

./: .gitignore  README.md  archtect.doc  test.doc  ~$chtect.doc
src/cpp/: Architect.docx
src/cpp/GTServer/: GTServer.VC.VC.opendb  GTServer.cfg  GTServer.sln  UpgradeLog.htm  UpgradeLog2.htm  UpgradeLog3.htm  UpgradeLog4.htm  bug_track.txt  delete_temp_folder.bat
src/cpp/GTServer/Debug/: GTServer.exp  GTServer.ilk  GTServer.lib  iocp.exp  iocp.ilk  iocp.lib
src/cpp/GTServer/GTAsio/: GTAsio.cpp  GTAsio.h  GTAsio.vcxproj.filters  stdafx.cpp  temp
src/cpp/GTServer/GTClient4Test/: GT_Client.cpp  GT_Client.h  GT_Client4Test.cpp  GT_Client4Test.vcxproj  GT_Client4Test.vcxproj.filters  ReadMe.txt
src/cpp/GTServer/GTConfig/: GTServer.cfg
src/cpp/GTServer/GTEpoll/: .CMakeLists.txt.swp  .GTEpoll_Interface.cpp.swp  .GTEpoll_Wrapper.cpp.swp  CMakeCache.txt  CMakeLists.txt  GTEpoll.cbp  GTEpollDefine.h  GTEpoll_Interface.cpp  GTEpoll_Interface.h  GTEpoll_Wrapper.cpp  GTEpoll_Wrapper.h  Makefile  cmake_install.cmake  version_ctrl.map
src/cpp/GTServer/GTEpoll/GTEpollUtility/: .GTEpoll_Utility.cpp.swp  GTEpoll_Utility.cpp  GTEpoll_Utility.h  GTEpoll_thread_pool.cpp  GTEpoll_thread_pool.h  GTEpool_Utility.h
src/cpp/GTServer/GTEpoll/test/: .GTEpoll_test_thunder_herd.cpp.swp  CMakeCache.txt  GTEpoll_test_thunder_herd.cpp  Makefile  cmake_install.cmake
src/cpp/GTServer/GTEpoll/test/test_client/: CMakeCache.txt  CMakeLists.txt  GTEpoll_test_thunder_herd_client.cpp  Makefile
src/cpp/GTServer/GTEpoll/test/test_server/: CMakeCache.txt  CMakeLists.txt  GTEpoll_test_thunder_herd.cpp  Makefile  cmake_install.cmake
src/cpp/GTServer/GTExitHelper/: GT_ExitHelper.cpp  GT_ServerHelper.vcxproj  GT_Server_ACCompany.vcxproj.filters  ReadMe.txt
src/cpp/GTServer/GTIOCP/: GTIOCP.h  GT_Definition.h  GT_IOCPWrapper.cpp  GT_IOCPWrapper.h  GT_IOContextBuffer_Manager.cpp  GT_IOContextBuffer_Manager.h  GT_Resource_Manager.cpp  GT_Resource_Manager.h  GT_ServerManager.h  GT_SocketContext.cpp  GT_SocketContext.h  GT_SocketPool_Manager.h
src/cpp/GTServer/GTLibev/: GTLibev.cpp  GTLibev.h  GTLibev.vcxproj  GTLibev.vcxproj.filters  ReadMe.txt  stdafx.cpp
src/cpp/GTServer/GTLibevent/: GT_Libevent.cpp  GT_Libevent.h  GT_Libevent.vcxproj  GT_Libevent.vcxproj.filters  GT_LibeventWrapper.cpp  GT_LibeventWrapper.h  ReadMe.txt  stdafx.cpp
src/cpp/GTServer/GTLibuvWrapper/: GT_LibuvWrapper.h  GT_LibuvWrapper.vcxproj  GT_LibuvWrapper.vcxproj.filters  stdafx.cpp
src/cpp/GTServer/GTSelect/: GT_Definition.h  GT_Select.cpp  GT_Select.h  GT_Select.vcxproj  GT_Select_Core.cpp  GT_Select_Wrapper.cpp  GT_Select_Wrapper.h  ReadMe.txt
src/cpp/GTServer/GTServer/: GTServer.cpp  GTServer.h  GTServer.vcxproj  GTServer.vcxproj.filters  GT_Cfg.h  GT_Definition.h  GT_IOBuffer.cpp  GT_IOBuffer.h  GT_IOBuffer_Manager.cpp  GT_IOBuffer_Manager.h  GT_IOCPWrapper.cpp  GT_IOCPWrapper.h  GT_IOContextBuffer.cpp  GT_IOContextBuffer.h  GT_IOContextBuffer_Manager.cpp  GT_IOContextBuffer_Manager.h  GT_Resource_Manager.cpp  GT_Resource_Manager.h  GT_ServerManager.cpp  GT_ServerManager.h  GT_SockIOContext.h  GT_SocketContext.cpp  GT_SocketContext.h  GT_SocketContext_IOContext_Manager.cpp  GT_SocketContext_IOContext_Manager.h  GT_SocketContext_Manager.cpp  GT_SocketContext_Manager.h  GT_SocketIOContext.cpp  GT_SocketIOContext.h  GT_SocketIOContext_Manager.cpp  GT_SocketIOContext_Manager.h  GT_SocketPool.h  GT_SocketPool_Manager.h  GT_SoketPool.cpp  GT_ThreadPool.cpp  GT_ThreadPool.h  GT_util_osinfo.cpp  GT_util_osinfo.h  IOCPWrapper.cpp  IOCPWrapper.h  (+1 more)
src/cpp/GTServer/GTServerWapper/: GT_Module_Wrapper.cpp  GT_Module_Wrapper.h  GT_Server_Wapper.vcxproj  GT_Server_Wapper.vcxproj.filters  ReadMe.txt
src/cpp/GTServer/GTTest/: GTTest.cpp  GTTest.vcxproj  GTTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
src/cpp/GTServer/GTUnitTest/: GTUnitTest.cpp  GTUnitTest.vcxproj  GTUnitTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
src/cpp/GTServer/GTUtlity/: GTUtlity.vcxproj  GTUtlity.vcxproj.filters  GT_Util_CfgHelper.cpp  GT_Util_CfgHelper.h  GT_Util_CmdParser.cpp  GT_Util_CmdParser.h  GT_Util_FileHelper.cpp  GT_Util_FileHelper.h  GT_Util_GlogWrapper.cpp  GT_Util_GlogWrapper.h  GT_Util_OSInfo.cpp  GT_Util_OSInfo.h  GT_Util_ThreadPool.cpp  GT_Util_ThreadPool.h  ReadMe.txt
src/cpp/GTServer/GT_Client4Test/: GT_Client.cpp  GT_Client.h  GT_Client4Test.cpp  GT_Client4Test.vcxproj  GT_Client4Test.vcxproj.filters  stdafx.cpp
src/cpp/GTServer/GT_ExitHelper/: GT_Server_ACCompany.vcxproj
src/cpp/GTServer/GT_IOCP/: GTIOCP.cpp  GTIOCP.h  GTServer.cpp  GTServer.h  GT_Cfg.h  GT_Definition.h  GT_IOCP.vcxproj  GT_IOCP.vcxproj.filters  GT_IOCPWrapper.cpp  GT_IOCPWrapper.h  GT_IOContextBuffer.cpp  GT_IOContextBuffer.h  GT_IOContextBuffer_Manager.cpp  GT_IOContextBuffer_Manager.h  GT_Resource_Manager.cpp  stdafx.cpp  (+7 more)
src/linux/: ReadMe.txt
src/linux/gtio/: GTLibev.h  GTLibevImpl.cpp  GTLibevImpl.h
(+47 files in other folders)
